Broadway CHAIN - SANDBOX/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Count_of_RS_by_Passage__c</fullName>
        <description>Count of bedded down actions recorded by Passage</description>
        <label>Count of RS (by Passage)</label>
        <summaryFilterItems>
            <field>Timeline_Event__c.Event__c</field>
            <operation>equals</operation>
            <value>street contact,Street Contact - Bedded Down, Street count</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Timeline_Event__c.Project_team_reporting__c</field>
            <operation>contains</operation>
            <value>Passage</value>
        </summaryFilterItems>
        <summaryForeignKey>Timeline_Event__c.Client__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_RS_by_Passage_apex__c</fullName>
        <label>Count of RS (by Passage)_apex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_RS_in_period_by_CSTM__c</fullName>
        <label>Count of RS in period (by CSTM)</label>
        <summaryFilterItems>
            <field>Timeline_Event__c.Creating_User_Organisation__c</field>
            <operation>equals</operation>
            <value>CSTM</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Timeline_Event__c.Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>9/1/2011 12:00 AM</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Timeline_Event__c.Date__c</field>
            <operation>lessOrEqual</operation>
            <value>9/30/2011 12:00 AM</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Timeline_Event__c.Event__c</field>
            <operation>equals</operation>
            <value>Street Contact - Bedded Down, Street count</value>
        </summaryFilterItems>
        <summaryForeignKey>Timeline_Event__c.Client__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_RS_in_period_by_Passage__c</fullName>
        <description>Count of bedded down street contacts (by Passage) within a specified period</description>
        <label>Count of RS in period (by Passage)</label>
        <summaryFilterItems>
            <field>Timeline_Event__c.Event__c</field>
            <operation>equals</operation>
            <value>Street Contact - Bedded Down, Street count</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Timeline_Event__c.Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>2/1/2014 12:00 AM</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Timeline_Event__c.Creating_User_Organisation__c</field>
            <operation>equals</operation>
            <value>Passage</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Timeline_Event__c.Date__c</field>
            <operation>lessOrEqual</operation>
            <value>2/28/2014 11:59 PM</value>
        </summaryFilterItems>
        <summaryForeignKey>Timeline_Event__c.Client__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_SIB_Employment__c</fullName>
        <description>Used to prevent more than one SIB employment timeline event being added for any given client.</description>
        <label>Count of SIB Employment</label>
        <summaryFilterItems>
            <field>Timeline_Event__c.Record_Type_ID__c</field>
            <operation>equals</operation>
            <value>012C0000000QECm</value>
        </summaryFilterItems>
        <summaryForeignKey>Timeline_Event__c.Client__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_SIB_Self_employment__c</fullName>
        <description>Used to prevent more than one SIB self-employment/volunteering timeline event being added for any given client</description>
        <label>Count of SIB Self-employment</label>
        <summaryFilterItems>
            <field>Timeline_Event__c.Record_Type_ID__c</field>
            <operation>equals</operation>
            <value>012C0000000QECr</value>
        </summaryFilterItems>
        <summaryForeignKey>Timeline_Event__c.Client__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_SSOs__c</fullName>
        <label>Count of SSOs</label>
        <summaryForeignKey>Single_Service_Offer__c.Client__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_new_rs_flow_forms__c</fullName>
        <description>Apex field which is populated with the number of Flow information records of record type &apos;New rough sleeper&apos;</description>
        <label>Count of new rs flow forms</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_open_Clearing_House_Stays__c</fullName>
        <label>Count of open Clearing House stays</label>
        <summaryFilterItems>
            <field>Timeline_Event__c.Accommodation2__c</field>
            <operation>equals</operation>
            <value>Clearing House/RSI</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Timeline_Event__c.Leaving_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Timeline_Event__c.Client__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country_1__c</fullName>
        <label>Country (1)</label>
        <picklist>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_2__c</fullName>
        <label>Country (2)</label>
        <picklist>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_3__c</fullName>
        <label>Country (3)</label>
        <picklist>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_Region__c</fullName>
        <inlineHelpText>Please use this field if the client is from UK, Lithuania, Poland or Romania</inlineHelpText>
        <label>Country/Region</label>
        <picklist>
            <controllingField>Nationality__c</controllingField>
            <picklistValues>
                <fullName>England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dolnośląskie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kujawsko-Pomorskie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lubelskie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lubuskie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lódzkie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Małopolskie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mazowieckie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opolskie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Podkarpackie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Podlaskie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pomorskie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sląskie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swiętokrzyskie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warmińsko-Mazurskie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wielkopolskie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zachodniopomorskie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argeș</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bacău</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bistrița-Năsăud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botoșani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brăila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brașov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bucharest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Criminal_record__c</fullName>
        <label>Criminal record?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known/stated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_enforcement_action__c</fullName>
        <label>Current enforcement action</label>
        <picklist>
            <picklistValues>
                <fullName>CBO application in progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current CBO in place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current ABC in place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enforcement target</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_enforcement_amended__c</fullName>
        <label>Current enforcement amended</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_enforcement_amended_by__c</fullName>
        <label>Current enforcement amended by</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_enforcement_amended_by_project__c</fullName>
        <label>Current enforcement amended by project</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_enforcement_review_date__c</fullName>
        <label>Current enforcement review date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_housing_situation_ex_referrals__c</fullName>
        <label>Current housing situation</label>
        <picklist>
            <picklistValues>
                <fullName>Hostel resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insecure housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known/stated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recently resettled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rough sleeper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Squatting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staying with friends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary accom (e.g. B&amp;B)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_housing_situation_notes__c</fullName>
        <label>Current housing situation notes</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB_Estimated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick if the date of birth is estimated</inlineHelpText>
        <label>DOB Estimated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_First_Contacted__c</fullName>
        <label>Date First Contacted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_First_Seen_Rough_Sleeping__c</fullName>
        <label>Date First Seen Rough Sleeping</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Last_Contacted__c</fullName>
        <label>Date Last Contacted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Last_Left_Prison__c</fullName>
        <label>Date Last Left Prison</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Last_Seen_Rough_Sleeping__c</fullName>
        <label>Date Last Seen Rough Sleeping</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Last_Support_Needs_Assessment__c</fullName>
        <label>Date Last Support Needs Assessment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_NSNO_offer_made__c</fullName>
        <label>Date offer made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_entered_UK__c</fullName>
        <label>Date entered UK</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_entered_UK_status__c</fullName>
        <label>Date entered UK - status</label>
        <picklist>
            <picklistValues>
                <fullName>Estimated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_exited_WSP_no_contact_for_1_year__c</fullName>
        <label>Date exited WSP (no contact for 1 year)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_first_seen_RS_in_Westminster__c</fullName>
        <label>Date first seen RS in Westminster</label>
        <summarizedField>Timeline_Event__c.Date__c</summarizedField>
        <summaryFilterItems>
            <field>Timeline_Event__c.Street_site_borough__c</field>
            <operation>equals</operation>
            <value>Westminster</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Timeline_Event__c.Event__c</field>
            <operation>equals</operation>
            <value>Street Contact - Bedded Down, Street count</value>
        </summaryFilterItems>
        <summaryForeignKey>Timeline_Event__c.Client__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_joined_TRIO__c</fullName>
        <inlineHelpText>Date the client started receiving service from TRIO project</inlineHelpText>
        <label>Date joined TRIO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_last_accessed_CSTM_nightcentre_apex__c</fullName>
        <label>Date last accessed CSTM night centre</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_last_assessed__c</fullName>
        <description>Date of most recent support needs assessment</description>
        <label>Date last assessed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_last_employed__c</fullName>
        <label>Date last employed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_last_left_armed_forces__c</fullName>
        <label>Date last left armed forces</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_last_left_care__c</fullName>
        <label>Date last left care</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_left_TRIO__c</fullName>
        <inlineHelpText>Date client stopped receiving service from TRIO</inlineHelpText>
        <label>Date left TRIO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_licence_supervision_order_ends__c</fullName>
        <label>Date licence/supervision order ends</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth_Encrypted__c</fullName>
        <label>Date of Birth (Encrypted)</label>
        <length>15</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Contact_SIB__c</fullName>
        <label>Date of First Contact (SIB)</label>
        <summarizedField>Timeline_Event__c.Date__c</summarizedField>
        <summaryFilterItems>
            <field>Timeline_Event__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>SIB First Contact</value>
        </summaryFilterItems>
        <summaryForeignKey>Timeline_Event__c.Client__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_of_death__c</fullName>
        <label>Date of death</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_most_recent_SNA_apex__c</fullName>
        <label>Date of most recent SNA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_since_certificates_submitted__c</fullName>
        <label>Date since certificates submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_Centre_RS_variance__c</fullName>
        <formula>IF ( First_accessed_day_centre_Passage__c &lt;=  Date_First_Contacted__c ,  DATEVALUE (Date_first_seen_RS_in_Westminster__c) -  First_accessed_day_centre_Passage__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day Centre/RS variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_last_contact_with_CSTM__c</fullName>
        <formula>IF(ISBLANK( Most_recent_CSTM_session_attendance_apex__c ), IF(ISBLANK(Most_recent_CSTM_TLE_apex__c),0,today() - Most_recent_CSTM_TLE_apex__c ), IF(today()-  DATEVALUE(Most_recent_CSTM_session_attendance_apex__c)  &gt; today() - Most_recent_CSTM_TLE_apex__c, today() - Most_recent_CSTM_TLE_apex__c, today()- DATEVALUE (Most_recent_CSTM_session_attendance_apex__c) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since last contact with CSTM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <formula>If(Isnull(Date_of_death__c),&quot;No&quot;,&quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deceased</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disability_TRIO__c</fullName>
        <description>Disability field for use by Thames Reach TRIO project.</description>
        <label>Disability (TRIO)</label>
        <picklist>
            <picklistValues>
                <fullName>Blind or Visual Impairment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning Difficulty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefer not to say</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deaf or Hearing Impairment</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Disability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disability_type__c</fullName>
        <label>Disability type</label>
        <picklist>
            <picklistValues>
                <fullName>Prefer not to say</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health condition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Longstanding illness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cognitiive impairment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental health condition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical impairment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental impairment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drug_DIP_Alcohol_Worker_Counsellor__c</fullName>
        <label>Drug/DIP/Alcohol Worker/Counsellor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drugs__c</fullName>
        <label>Drugs</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known/stated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Economic_status__c</fullName>
        <label>Economic status</label>
        <picklist>
            <picklistValues>
                <fullName>Full-time student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full-time work &gt; 24 hrs/wk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Govt training/New Deal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job seeker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long-term sick/disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not seeking work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other adult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part-time work &lt; 24 hrs/wk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employment_Education_Training_1_from__c</fullName>
        <label>Employment/Education/Training 1 from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employment_Education_Training_1_to__c</fullName>
        <label>Employment/Education/Training 1 to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employment_Education_Training_2_from__c</fullName>
        <label>Employment/Education/Training 2 from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employment_Education_Training_2_to__c</fullName>
        <label>Employment/Education/Training 2 to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employment_Education_Training_3__c</fullName>
        <label>Employment/Education/Training 3</label>
        <type>TextArea</type>
    </fields>
</CustomObject>